[project]
name = "my-hacker-news-rss"
version = "0.1.0"
description = "A Python-based RSS feed generator that filters Hacker News stories based on customizable keywords."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedgen>=1.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
